--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+# Custom ignores
+DialogManager/addons
 
 # Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
+DialogManager/.import/
+DialogManager/export.cfg
+DialogManager/export_presets.cfg
 
 # Mono-specific ignores
-.mono/
+DialogManager/.mono/
